--- a/app/src/main/res/layout/activity_tela_fatorial.xml
+++ b/app/src/main/res/layout/activity_tela_fatorial.xml
@@ -6,67 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".TelaFatorial">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-200dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img" />
-
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="313dp"
-        android:layout_height="115dp"
+        android:layout_width="325dp"
+        android:layout_height="187dp"
         android:layout_marginStart="49dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="49dp"
-        android:fontFamily="@font/abril_fatface"
-        android:text="FATORIAL"
+        android:fontFamily="sans-serif"
+        android:text="Descubra o Fatorial de um número"
         android:textAlignment="center"
-        android:textColor="#020100"
+        android:textColor="#F44336"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editCalcularFatorial"
-        android:layout_width="249dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="14dp"
+        android:layout_width="262dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginEnd="81dp"
+        android:layout_marginBottom="35dp"
         android:ems="10"
-        android:hint="Insira o número:"
+        android:hint="Insira:"
         android:inputType="textPersonName|numberDecimal"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_CalcularFatorial"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_CalcularFatorial"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/btn_CalcularFatorial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="259dp"
+        android:layout_marginStart="149dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="150dp"
         android:backgroundTint="#000000"
         android:onClick="calcularFatorial"
         android:text="Calcular"
-        app:layout_constraintBottom_toTopOf="@+id/VoltarFatorial"
+        android:textColor="#F44336"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editVerificarPrimos"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editCalcularFatorial" />
 
     <TextView
         android:id="@+id/txtResultadoFatorial"
@@ -74,29 +60,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="181dp"
         android:layout_marginEnd="172dp"
-        android:layout_marginBottom="136dp"
-        android:text="Aguardando..."
+        android:layout_marginBottom="207dp"
+        android:text="Resultado..."
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/VoltarFatorial"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/VoltarFatorial"
-        android:layout_width="196dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="107dp"
-        android:layout_marginTop="632dp"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="39dp"
-        android:text="Voltar ao Menu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
