--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,76 +9,64 @@
 
     <Button
         android:id="@+id/btnAbrirFibonacci"
-        android:layout_width="220dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="95dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="96dp"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="136dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="11dp"
         android:text="Fibonacci"
+        app:layout_constraintBottom_toTopOf="@+id/btn_numeroprimo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAbrirFatorial" />
+        app:layout_constraintStart_toEndOf="@+id/btnAbrirFatorial"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.581" />
 
     <Button
         android:id="@+id/btnAbrirFatorial"
-        android:layout_width="220dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="95dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="96dp"
-        android:layout_marginBottom="13dp"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="168dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="34dp"
+        android:background="#4E1F1F"
+        android:backgroundTint="#E91E63"
+        android:backgroundTintMode="add"
         android:text="Fatorial"
-        app:layout_constraintBottom_toTopOf="@+id/btnAbrirFibonacci"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:iconTint="#100909"
+        app:layout_constraintBottom_toTopOf="@+id/btn_numeroprimo"
+        app:layout_constraintEnd_toStartOf="@+id/btnAbrirFibonacci"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/btn_numeroprimo"
-        android:layout_width="220dp"
-        android:layout_height="58dp"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
         android:layout_marginStart="95dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="34dp"
         android:layout_marginEnd="96dp"
-        android:layout_marginBottom="211dp"
         android:text="Número Primo"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAbrirFibonacci"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAbrirFatorial" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="313dp"
         android:layout_height="115dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="49dp"
-        android:fontFamily="@font/abril_fatface"
-        android:text="MENU PRINCIPAL"
+        android:fontFamily="sans-serif"
+        android:text="MENU"
         android:textAlignment="center"
-        android:textColor="#020100"
-        android:textSize="40sp"
+        android:textColor="#F44336"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        tools:layout_editor_absoluteY="168dp" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-200dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img" />
 </androidx.constraintlayout.widget.ConstraintLayout>
